--- a/Activities/Get_Homework.html
+++ b/Activities/Get_Homework.html
@@ -110,7 +110,7 @@
 <br>
 <table >
 <thead>
-<th colspan="2"><h2> Standard 6th (<a href="homework.pdf">Get pdf</a>) </h2></th>
+<th colspan="2"><h2> Standard 6th (<a href="#">Get pdf</a>) </h2></th>
 </thead>
 <thead>
 <th colspan="1"><h3>Subject Name </h3></th>
