--- a/Activities/Vacation_Schedule.html
+++ b/Activities/Vacation_Schedule.html
@@ -114,7 +114,7 @@
 <div>
 <table>
 <thead>
-<th colspan="2"><h2> Public Holidays (<a href="homework.pdf">Get pdf</a>) </h2></th>
+<th colspan="2"><h2> Public Holidays (<a href="#">Get pdf</a>) </h2></th>
 </thead>
 <thead>
 <th colspan="1"><h3>Date </h3></th>
