--- a/Academics/Student_Achievers.html
+++ b/Academics/Student_Achievers.html
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -101,3 +102,38 @@
 </nav>
 
 <br>
+<header>
+<h2 align ='center'> Student Achievers Of The School </h2>
+</header>
+<br>
+
+<h1> Student Achievers-: </h1>
+<table class="center">
+<thead>
+<th colspan="1"> Title</th>
+<th colspan="1"> Session
+& class</th>
+<th colspan="1"> Photo</th>
+<th colspan="1"> Name</th>
+<th colspan="1"> Achievement</th>
+<thead>
+<tr>
+<td>
+The title 
+</td>
+<td>
+20__-20__
+<p>
+___</p>
+</td>
+<td>
+<img src="images/boy.png" width="50px">
+</td>
+<td>
+Name Here
+</td>
+Achievement will be written here
+</td>
+</tr>
+
+</table> 
