--- a/Academics/Teacher_Achievers.html
+++ b/Academics/Teacher_Achievers.html
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -102,4 +103,37 @@
 </nav>
 
 <br>
+<header>
+<h2 align ='center'> Teacher Achievers Of The School </h2>
+</header>
+<br>
 
+<h1> Teacher Achievers-: </h1>
+<table class="center">
+<thead >
+<th colspan="1"> Sr. no.</th>
+<th colspan="1"> Designation</th>
+<th colspan="1"> Photo</th>
+<th colspan="1"> Name</th>
+<th colspan="1"> Achievement</th>
+<thead>
+<tr>
+<td>
+1.
+</td>
+<td>
+P.G.T.
+
+</td>
+<td>
+<img src="images/man.png" width="50px">
+</td>
+<td>
+Sh. _________ 
+</td>
+<td>
+the achievement will be written here
+</td>
+</tr>
+
+</table> 
