--- a/Students_Section/Literature(a-z).html
+++ b/Students_Section/Literature(a-z).html
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -102,3 +103,81 @@
 </nav>
 
 <br>
+<header>
+<h2 align="center"> Get the books! Popular Fiction And Non-Fiction... </h2>
+</header>
+<br>
+<h1> Literature:- </h1>
+<br>
+
+<block1>
+<div id="container">
+
+<div>
+<h2> English Fiction </h2>
+<a href=""><button >See the book List</button></a>
+</div>
+
+
+<div>
+<h2> English Non-fiction </h2>
+<a href=""><button >See the book List</button></a>
+</div>
+
+<div>
+<h2>English Biographies </h2>
+<a href=""><button >See the book List</button></a>
+</div>
+
+
+<div>
+<h2> English Short Stories </h2>
+<a href=""><button >See the book List</button></a>
+</div>
+
+<div>
+<h2> English Poetry</h2>
+<a href=""><button >See the book List</button></a>
+</div>
+</div>
+</block1>
+
+<br>
+
+<block1>
+<div id="container">
+
+<div>
+<h2>Hindi Fiction  </h2>
+<a href=""><button >See the book List</button></a>
+</div>
+
+
+<div>
+<h2> Hindi Non-fiction </h2>
+<a href=""><button >See the book List</button></a>
+</div>
+
+<div>
+<h2> Hindi Biographies </h2>
+<a href=""><button >See the book List</button></a>
+</div>
+
+<div>
+<h2> Hindi Short Stories</h2>
+<a href=""><button >See the book List</button></a>
+</div>
+
+
+<div>
+<h2>Hindi Poetry </h2>
+<a href=""><button >See the book List</button></a>
+</div>
+</div>
+</block1>
+</cure>
+<br>
+<footer>
+<p align="center"> This website is managed by a student. <a href="https://divyanshushares.github.io">Click here</a> to know more. </p>
+</footer>
+
