--- a/Students_Section/Sports_Corner.html
+++ b/Students_Section/Sports_Corner.html
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -103,3 +104,67 @@
 </nav>
 
 <br>
+<header>
+<h2 align ='center'> Welcome To The Sports Corner! </h2>
+</header>
+<h1> Sports Corner! </h1>
+<kr>
+<h2> Facilties Provided:</h2>
+
+<p><strong>Volleyball-Playground </strong>: Present ✅️ </p>
+<p><strong>Kabaddi-Playground </strong>: Present ✅️ </p>
+<p><strong>Badminton-Playground </strong>: Present ✅️ </p>
+<kr>
+
+<h2> Recently... </h2>
+<div id="container">
+<item>
+<img src="file.png" width="250px">
+<p>Date: --/--/---- </p>
+<p>Event: ________ </p>
+</item>
+<item1>
+<p> <strong> Student Sports Achievement: </strong> School student <b>Amit Dhillon</b> got selected for Under-17 National Level Weightlifting Championship. He secured Silver medal at State level Weightligting Championship. </p>
+</item1>
+</div>
+<kr>
+<h2> Our Gems... </h2>
+
+<table class="center">
+<thead>
+<th colspan="1"> Title</th>
+<th colspan="1"> Session
+& class</th>
+<th colspan="1"> Photo</th>
+<th colspan="1"> Name</th>
+<th colspan="1"> Achievement</th>
+<thead>
+<tr>
+<td>
+Weightlifting
+</td>
+<td>
+2023 -2024
+<p>
+10+2</p>
+</td>
+<td>
+<img src="images/boy.png" width="50px">
+</td>
+<td>
+<b>
+Amit Dhillon
+</b>
+</td>
+<td>
+Secured ______ medal in U-17 inter-school National level weightlifting championship.
+</td>
+</tr>
+
+</table> 
+</cure>
+<br>
+<footer>
+<p align="center"> This website is managed by a student. <a href="https://divyanshushares.github.io">Click here</a> to know more. </p>
+</footer>
+
