--- a/Features/Syllabus.html
+++ b/Features/Syllabus.html
@@ -11,6 +11,9 @@
 <meta property="og:image" content="https://i.imgur.com/DG2HG8s.png">
 <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152-precomposed.png"/>
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
+<style>
+
+</style>
 </head>
 <body>
 <cure>
@@ -104,89 +107,238 @@
 <br>
 <header> <h2 align="center">Syllabus is planned by state board i.e. HPBOSE </h2> </header>
 <h1> Syllabus:- </h1>
-<br>
-<div id="container">
-<div>
-<table>
-<thead>
-<th colspan="1"><h2> Standard 6th Syllabus:- </h2></th>
-</thead>
-<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
-</tr> </td>
-</table></div>
-<div>
-<table>
-<thead>
-<th colspan="1"><h2> Standard 7th Syllabus:- </h2></th>
-</thead>
-<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
-</tr> </td>
-</table>
-</div>
-<div>
-<table>
-<thead>
-<th colspan="1"><h2> Standard 8th Syllabus:- </h2></th>
-</thead>
-<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
-</tr> </td>
-</table>
-</div>
-<div>
-<table>
-<thead>
-<th colspan="1"><h2> Standard 9th Syllabus:- </h2></th>
-</thead>
-<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
-</tr> </td>
-</table>
-</div>
-<div>
-<table>
-<thead>
-<th colspan="1"><h2> Standard 10th Syllabus:- </h2></th>
-</thead>
-<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
-</tr> </td>
-</table>
-</div>
-<div>
-<table>
-<thead>
-<th colspan="1"><h2> Standard 11th Syllabus:- </h2></th>
-</thead>
-<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
-</tr> </td>
-</table>
-</div>
-<div>
-<table>
-<thead>
-<th colspan="1"><h2> Standard 12th Syllabus:- </h2></th>
-</thead>
-<tr> <td> <p> <a href=""> Look at the syllabus </a></p>
-</tr> </td>
-</table>
-</div>
-</div>
-<br>
-<hr>
-<beauty> <h2 align="center"> Syllabus For Other Competitive Exams </h2>
-<ol>
+<h1 align="center"> Session 2023-2024 </h1>
+<kr>
+<p><h2> Note: </h2> The syllabus link/pdf provided here is designed and prepared by the Himachal Pradesh Board Of Secondary Education...</p>
+<p> The Syllabus is also available on the official website of Board. </p>
+<h2> On this page </h2>
+
 <p>
-<li>
-<h3> National Eligibility Cum Entrance Test (NEET) </h3></li> <a href=""> Get the syllabus</a></p>
+<a href="#9th">9th Syllabus</a>
+</p>
 <p>
-<li>
-<h3> Joint Entrance Examination  (JEE) </h3></li> <a href=""> Get the syllabus</a></p>
-</ol>
-</beauty>
+<a href="#10th">10th Syllabus</a>
+</p><p>
+<a href="#11th">11th Syllabus</a>
+</p><p>
+<a href="#12th">12th Syllabus</a>
+</p>
+
+<br>
+
+<block>
+<h2 id="9th"></h2>
+ <h2 align='center'> Standard 9th Syllabus </h2> 
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Art.9.01.12.2022.pdf"> Syllabus for Art</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.CS.09.30.01.2023.pdf"> Syllabus for Computer Science</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Eng.9.01.12.2022.pdf"> Syllabus for English</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Hind.9.01.12.2022.pdf"> Syllabus for Hindi</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Math.9.01.12.2022.pdf"> Syllabus for Maths</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.9.05.08.2023.pdf"> Syllabus for Music</a>
+</button>
+
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.9.05.08.2023.pdf"> Syllabus for Sanskrit</a>
+</button>
+
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.9.05.08.2023.pdf"> Syllabus for Science</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.9.05.08.2023.pdf"> Syllabus for Social Science</a>
+</button>
+</block>
+
+
+
+
+<block>
+<h2 id="10th"></h2>
+ <h2 align='center'> Standard 10th Syllabus </h2> 
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Art.10.23.09.2023.pdf"> Syllabus for Art</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.CS.10.23.09.2023.pdf"> Syllabus for Computer Science</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Eng.10.23.09.2023.pdf"> Syllabus for English</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Hnd.10.23.09.2023.pdf"> Syllabus for Hindi</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Math.10.23.09.2023.pdf"> Syllabus for Maths</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Msc.10.23.09.2023.pdf"> Syllabus for Music</a>
+</button>
+
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Sskt.10.18.10.2023.pdf"> Syllabus for Sanskrit</a>
+</button>
+
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Sci.10.23.09.2023.pdf"> Syllabus for Science</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Soc.Sci.10.23.09.2023.pdf"> Syllabus for Social Science</a>
+</button>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Udu.10.23.09.2023.pdf"> Syllabus for Urdu</a>
+</button>
+</block>
+
+
+
+
+
+
+<block>
+<h2 id="11th"></h2>
+ <h2 align='center'> Standard 11th Syllabus </h2> 
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Acct.11.01.12.2022.pdf"> Syllabus for Accountancy</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Bio.11.01.12.2022.pdf"> Syllabus for Biology</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Bst.Sty.11.01.12.2022.pdf"> Syllabus for Business Studies</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Chem.11.01.12.2022.pdf"> Syllabus for Chemistry</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.CS.11.01.12.2022.pdf"> Syllabus for Computer Science</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Eco.11.01.12.2022.pdf"> Syllabus for Economics</a>
+</button>
+
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Eng.11.01.12.2022.pdf"> Syllabus for English</a>
+</button>
+
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Geo.11.01.12.2022.pdf"> Syllabus for Geography</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Hnd.11.01.12.2022.pdf"> Syllabus for Hindi</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Hist.11.01.12.2022.pdf"> Syllabus for History</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Math.11.01.12.2022.pdf"> Syllabus for Maths</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.11.05.08.2023.pdf"> Syllabus for Music</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Phy.Edu.11.01.12.2022.pdf"> Syllabus for Physical Education</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Phy.11.01.12.2022.pdf"> Syllabus for Physics</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Pol.Sci11.01.12.2022.pdf"> Syllabus for Political Science</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Sskt.11.01.12.2022.pdf"> Syllabus for Sanskrit</a>
+</button>
+</block>
+
+
+<block>
+<h2 id="12th"></h2>
+ <h2 align='center'> Standard 12th Syllabus </h2> 
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Acct.23.09.2023.pdf"> Syllabus for Accountancy</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Bio.23.09.2023.pdf"> Syllabus for Biology</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Bss.Std.23.09.2023.pdf"> Syllabus for Business Studies</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Chem.23.09.2023.pdf"> Syllabus for Chemistry</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.CS.23.09.2023.pdf"> Syllabus for Computer Science</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Eco.23.09.2023.pdf"> Syllabus for Economics</a>
+</button>
+
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Eng.23.09.2023.pdf"> Syllabus for English</a>
+</button>
+
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Geo.23.09.2023.pdf"> Syllabus for Geography</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Hnd.23.09.2023.pdf"> Syllabus for Hindi</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Histry.23.09.2023.pdf"> Syllabus for History</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Math.23.09.2023.pdf"> Syllabus for Maths</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Msc.23.09.2023.pdf"> Syllabus for Music</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Phy.Edu.23.09.2023.pdf"> Syllabus for Physical Education</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Physics.23.09.2023.pdf"> Syllabus for Physics</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Pol.Sci.23.09.2023.pdf"> Syllabus for Political Science</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Psyscho.23.09.2023.pdf"> Syllabus for Psychology</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Pub.Adm.23.09.2023.pdf"> Syllabus for Public Administration</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Sskt.23.09.2023.pdf"> Syllabus for Sanskrit</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Socio.23.09.2023.pdf"> Syllabus for Sociology</a>
+</button>
+<button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Udu.23.09.2023.pdf"> Syllabus for Urdu</a>
+</button>
+<button>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Yog.23.09.2023.pdf"> Syllabus for Yoga</a>
+</button>
+
+</block>
+
+
+<br>
 </cure>
-
-
-
 <br>
 <footer>
-<p align="center"> This website is managed by a student. <a href="https://divyanshushares.github.io">Click here</a> to know more. </a>
+<p align="center"> This website is managed by a student. <a href="https:divyanshushares.github.io">Click here</a> to know more.
 </footer>
-
+</body>
