--- a/Features/Syllabus.html
+++ b/Features/Syllabus.html
@@ -126,39 +126,31 @@
 
 <br>
 
+
 <block>
 <h2 id="9th"></h2>
  <h2 align='center'> Standard 9th Syllabus </h2> 
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Art.9.01.12.2022.pdf"> Syllabus for Art</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.CS.09.30.01.2023.pdf"> Syllabus for Computer Science</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Eng.9.01.12.2022.pdf"> Syllabus for English</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Hind.9.01.12.2022.pdf"> Syllabus for Hindi</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Math.9.01.12.2022.pdf"> Syllabus for Maths</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.9.05.08.2023.pdf"> Syllabus for Music</a>
-</button>
 
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.9.05.08.2023.pdf"> Syllabus for Sanskrit</a>
-</button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Art.9.01.12.2022.pdf"> <button>Syllabus for Art </button></a></p>
 
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.9.05.08.2023.pdf"> Syllabus for Science</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.9.05.08.2023.pdf"> Syllabus for Social Science</a>
-</button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.CS.09.30.01.2023.pdf"> <button>Syllabus for Computer Science </button></a></p>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Eng.9.01.12.2022.pdf"> <button>Syllabus for English </button></a></p>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Hind.9.01.12.2022.pdf"> <button>Syllabus for Hindi </button></a></p>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Math.9.01.12.2022.pdf"><button> Syllabus for Maths</button></a></p>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.9.05.08.2023.pdf"> <button>Syllabus for Music</button></a></p>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.9.05.08.2023.pdf"><button> Syllabus for Sanskrit </button></a></p>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.9.05.08.2023.pdf"><button> Syllabus for Science </button></a></p>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.9.05.08.2023.pdf"> <button>Syllabus for Social Science</button></a></p>
+
 </block>
+
 
 
 
@@ -166,40 +158,38 @@
 <block>
 <h2 id="10th"></h2>
  <h2 align='center'> Standard 10th Syllabus </h2> 
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Art.10.23.09.2023.pdf"> Syllabus for Art</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.CS.10.23.09.2023.pdf"> Syllabus for Computer Science</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Eng.10.23.09.2023.pdf"> Syllabus for English</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Hnd.10.23.09.2023.pdf"> Syllabus for Hindi</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Math.10.23.09.2023.pdf"> Syllabus for Maths</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Msc.10.23.09.2023.pdf"> Syllabus for Music</a>
-</button>
 
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Sskt.10.18.10.2023.pdf"> Syllabus for Sanskrit</a>
-</button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Art.10.23.09.2023.pdf"><button>Syllabus for Art</button></a></p>
 
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Sci.10.23.09.2023.pdf"> Syllabus for Science</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Soc.Sci.10.23.09.2023.pdf"> Syllabus for Social Science</a>
-</button>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Udu.10.23.09.2023.pdf"> Syllabus for Urdu</a>
-</button>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.CS.10.23.09.2023.pdf"><button> Syllabus for Computer Science</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Eng.10.23.09.2023.pdf"> <button>Syllabus for English</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Hnd.10.23.09.2023.pdf"> <button>Syllabus for Hindi</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Math.10.23.09.2023.pdf"> <button>Syllabus for Maths</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Msc.10.23.09.2023.pdf"><button>Syllabus for Music</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Sskt.10.18.10.2023.pdf"><button> Syllabus for Sanskrit</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Sci.10.23.09.2023.pdf"> <button>Syllabus for Science</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Soc.Sci.10.23.09.2023.pdf"><button> Syllabus for Social Science</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Udu.10.23.09.2023.pdf"><button> Syllabus for Urdu</button></a></p>
 </block>
+
+
 
 
 
@@ -209,136 +199,136 @@
 <block>
 <h2 id="11th"></h2>
  <h2 align='center'> Standard 11th Syllabus </h2> 
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Acct.11.01.12.2022.pdf"> Syllabus for Accountancy</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Bio.11.01.12.2022.pdf"> Syllabus for Biology</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Bst.Sty.11.01.12.2022.pdf"> Syllabus for Business Studies</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Chem.11.01.12.2022.pdf"> Syllabus for Chemistry</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.CS.11.01.12.2022.pdf"> Syllabus for Computer Science</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Eco.11.01.12.2022.pdf"> Syllabus for Economics</a>
-</button>
 
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Eng.11.01.12.2022.pdf"> Syllabus for English</a>
-</button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Acct.11.01.12.2022.pdf"><button> Syllabus for Accountancy</button></a>
+</p>
 
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Geo.11.01.12.2022.pdf"> Syllabus for Geography</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Hnd.11.01.12.2022.pdf"> Syllabus for Hindi</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Hist.11.01.12.2022.pdf"> Syllabus for History</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Math.11.01.12.2022.pdf"> Syllabus for Maths</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.11.05.08.2023.pdf"> Syllabus for Music</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Phy.Edu.11.01.12.2022.pdf"> Syllabus for Physical Education</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Phy.11.01.12.2022.pdf"> Syllabus for Physics</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Pol.Sci11.01.12.2022.pdf"> Syllabus for Political Science</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Sskt.11.01.12.2022.pdf"> Syllabus for Sanskrit</a>
-</button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Bio.11.01.12.2022.pdf"><button> Syllabus for Biology</button></a>
+</p>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Bst.Sty.11.01.12.2022.pdf"><button> Syllabus for Business Studies</button></a>
+</p>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Chem.11.01.12.2022.pdf"><button> Syllabus for Chemistry</button></a>
+</p>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.CS.11.01.12.2022.pdf"><button> Syllabus for Computer Science</button></a>
+</p>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Eco.11.01.12.2022.pdf"><button> Syllabus for Economics</button></a>
+</p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Eng.11.01.12.2022.pdf"><button> Syllabus for English</button></a></p>
+
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Geo.11.01.12.2022.pdf"><button> Syllabus for Geography</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Hnd.11.01.12.2022.pdf"><button> Syllabus for Hindi</button></a></p>
+</p>
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Hist.11.01.12.2022.pdf"><button> Syllabus for History</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Math.11.01.12.2022.pdf"><button> Syllabus for Maths</button></a> </p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.11.05.08.2023.pdf"><button> Syllabus for Music</button></a> </p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Phy.Edu.11.01.12.2022.pdf"><button> Syllabus for Physical Education</button></a> </p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Phy.11.01.12.2022.pdf"><button> Syllabus for Physics</button></a> </p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Pol.Sci11.01.12.2022.pdf"> <button>Syllabus for Political Science</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sylla.Sskt.11.01.12.2022.pdf"><button> Syllabus for Sanskrit</button></a></p>
 </block>
+
+
 
 
 <block>
 <h2 id="12th"></h2>
  <h2 align='center'> Standard 12th Syllabus </h2> 
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Acct.23.09.2023.pdf"> Syllabus for Accountancy</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Bio.23.09.2023.pdf"> Syllabus for Biology</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Bss.Std.23.09.2023.pdf"> Syllabus for Business Studies</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Chem.23.09.2023.pdf"> Syllabus for Chemistry</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.CS.23.09.2023.pdf"> Syllabus for Computer Science</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Eco.23.09.2023.pdf"> Syllabus for Economics</a>
-</button>
 
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Eng.23.09.2023.pdf"> Syllabus for English</a>
-</button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Acct.23.09.2023.pdf"><button> Syllabus for Accountancy</button></a></p>
 
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Geo.23.09.2023.pdf"> Syllabus for Geography</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Hnd.23.09.2023.pdf"> Syllabus for Hindi</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Histry.23.09.2023.pdf"> Syllabus for History</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Math.23.09.2023.pdf"> Syllabus for Maths</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Msc.23.09.2023.pdf"> Syllabus for Music</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Phy.Edu.23.09.2023.pdf"> Syllabus for Physical Education</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Physics.23.09.2023.pdf"> Syllabus for Physics</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Pol.Sci.23.09.2023.pdf"> Syllabus for Political Science</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Psyscho.23.09.2023.pdf"> Syllabus for Psychology</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Pub.Adm.23.09.2023.pdf"> Syllabus for Public Administration</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Sskt.23.09.2023.pdf"> Syllabus for Sanskrit</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Socio.23.09.2023.pdf"> Syllabus for Sociology</a>
-</button>
-<button>
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Udu.23.09.2023.pdf"> Syllabus for Urdu</a>
-</button>
-<button>
 
-<p> <a href="https://hpbose.org/Admin/Upload/Sy.Yog.23.09.2023.pdf"> Syllabus for Yoga</a>
-</button>
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Bio.23.09.2023.pdf"> <button>Syllabus for Biology</button></a></p>
 
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Bss.Std.23.09.2023.pdf"><button> Syllabus for Business Studies</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Chem.23.09.2023.pdf"><button> Syllabus for Chemistry</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.CS.23.09.2023.pdf"><button> Syllabus for Computer Science</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Eco.23.09.2023.pdf"><button> Syllabus for Economics</button></a></p>
+
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Eng.23.09.2023.pdf"><button> Syllabus for English</button></a></p>
+
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Geo.23.09.2023.pdf"><button> Syllabus for Geography</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Hnd.23.09.2023.pdf"><button> Syllabus for Hindi</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Histry.23.09.2023.pdf"><button> Syllabus for History</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Math.23.09.2023.pdf"><button> Syllabus for Maths</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Msc.23.09.2023.pdf"><button> Syllabus for Music</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Phy.Edu.23.09.2023.pdf"><button> Syllabus for Physical Education</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Physics.23.09.2023.pdf"><button> Syllabus for Physics</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Pol.Sci.23.09.2023.pdf"><button> Syllabus for Political Science</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Psyscho.23.09.2023.pdf"><button> Syllabus for Psychology</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Pub.Adm.23.09.2023.pdf"><button> Syllabus for Public Administration</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Sskt.23.09.2023.pdf"><button> Syllabus for Sanskrit</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Socio.23.09.2023.pdf"> <button>Syllabus for Sociology</button></a></p>
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Udu.23.09.2023.pdf"><button> Syllabus for Urdu</button></a></p>
+
+
+
+<p> <a href="https://hpbose.org/Admin/Upload/Sy.Yog.23.09.2023.pdf"><button> Syllabus for Yoga</button></p>
+</a>
 </block>
-
-
-<br>
 </cure>
+
+
+
 <br>
 <footer>
 <p align="center"> This website is managed by a student. <a href="https:divyanshushares.github.io">Click here</a> to know more.
 </footer>
-</body>
+
