--- a/Academics/Academic_Records.html
+++ b/Academics/Academic_Records.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academic Records | GSSSBangana</title>
-    <link href="main.css" rel="stylesheet" type="text/css" />
+    <link href="gsss.css" rel="stylesheet" type="text/css" />
     <script src="java.js" type="text/javascript"></script>
    <link rel=" icon" href="/hpbose.ICO" type="image/x-icon"/>
 <link rel="shortcut icon" href="/hpbose.ICO" type="image/x-icon"/>
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -118,3 +119,1049 @@
 
 <br>
 
+<header>
+<h1 align="center"> Academic Records Of The School </h1>
+</header>
+
+<h2 align="center"  style="color:"> Matric Toppers Of last 13 years! </h2>
+
+<table>
+<th colspan="1">
+Session
+</th>
+<th colspan="1"> 
+Name
+</th>
+<th colspan="1">
+Marks Obtained
+</th>
+<th colspan="1">
+Percentage
+</th>
+<tr>
+<td>
+2010-11
+</td>
+<td>
+Deeksha Thakur
+</td>
+<td>
+619/700
+</td>
+<td>
+88.42%
+</td>
+</tr>
+
+
+<tr>
+<td>
+2011-12
+</td>
+<td>
+Aman Sharma
+</td>
+<td>
+628/700
+</td>
+<td>
+89.71%
+</td>
+</tr>
+
+
+<tr>
+<td>
+2012-13
+</td>
+<td>
+Akshay Kumar
+</td>
+<td>
+656/700
+</td>
+<td>
+93.71%
+</td>
+</tr>
+
+<tr>
+<td>
+2013-14
+</td>
+<td>
+Chandan Syal
+</td>
+<td>
+654/700
+</td>
+<td>
+93.42%
+</td>
+</tr>
+
+
+<tr>
+<td>
+2014-15
+</td>
+<td>
+Abhinandan Kharyal
+</td>
+<td>
+657/700
+</td>
+<td>
+93.85%
+</td>
+</tr>
+
+<tr>
+<td>
+2015-16
+</td>
+<td>
+Shivam Moudgil
+</td>
+<td>
+598/700
+</td>
+<td>
+85.42%
+</td>
+</tr>
+
+
+<tr>
+<td>
+2016-17
+</td>
+<td>
+Saniya
+</td>
+<td>
+634/700
+</td>
+<td>
+90.57%
+</td>
+</tr>
+
+
+<tr>
+<td>
+2017-18
+</td>
+<td>
+Ravinder Singh
+</td>
+<td>
+562/700
+</td>
+<td>
+80.28%
+</td>
+</tr>
+
+
+<tr>
+<td>
+2018-19
+</td>
+<td>
+Yugam Sharma
+</td>
+<td>
+549/700
+</td>
+<td>
+78.42%
+</td>
+</tr>
+
+
+<tr>
+<td>
+2019-20
+</td>
+<td>
+Anishika
+</td>
+<td>
+517/700
+</td>
+<td>
+73.85%
+</td>
+</tr>
+
+<tr>
+<td>
+2020-21
+</td>
+<td>
+Shivangi
+</td>
+<td>
+654/700
+</td>
+<td>
+93.42%
+</td>
+</tr>
+
+<tr>
+<td>
+2021-22
+</td>
+<td>
+Kanan Sharma
+</td>
+<td>
+616/700
+</td>
+<td>
+88%
+</td>
+</tr>
+
+<tr>
+<td>
+2022-23
+</td>
+<td>
+Vaishnavi
+</td>
+<td>
+660/700
+</td>
+<td>
+94.28%
+</td>
+</tr>
+
+
+
+
+
+</table>
+
+
+
+<kr>
+
+
+<h2 align="center"> 10+2 toppers of the school (Stream wise) </h2>
+
+<div class="container1">
+<div class="item">
+<table>
+<thead>
+<th colspan="4">
+Science Stream
+</th>
+</thead>
+<thead>
+<th colspan="1">
+Session
+</th>
+<th colspan="1"> 
+Name
+</th>
+<th colspan="1">
+Marks Obtained
+</th>
+<th colspan="1">
+Percentage
+</th>
+</thead>
+
+
+
+<tr>
+<td>
+2010-11
+</td>
+<td>
+Shailza Pathania
+</td>
+<td>
+403/500
+</td>
+<td>
+80.6%
+</td>
+</tr>
+
+
+
+
+
+
+<tr>
+<td>
+2011-12
+</td>
+<td>
+Anurag Sharma
+</td>
+<td>
+449/500
+</td>
+<td>
+89.8%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2012-13
+</td>
+<td>
+Diksha Thakur
+</td>
+<td>
+457/500
+</td>
+<td>
+91.4%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2013-14
+</td>
+<td>
+Himani
+</td>
+<td>
+456/500
+</td>
+<td>
+91.2%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2014-15
+</td>
+<td>
+Akshay Kumar
+</td>
+<td>
+442/500
+</td>
+<td>
+88.4%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2015-16
+</td>
+<td>
+Anu Thakur
+</td>
+<td>
+470/500
+</td>
+<td>
+94%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2016-17
+</td>
+<td>
+Samiksha Thakur
+</td>
+<td>
+454/500
+</td>
+<td>
+90.8%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+2017-18
+</td>
+<td>
+Nihal Atri
+</td>
+<td>
+452/700
+</td>
+<td>
+90.4%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2018-19
+</td>
+<td>
+Anjali Sharma
+</td>
+<td>
+446/500
+</td>
+
+<td>
+89.2%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2019-20
+</td>
+<td>
+Shaifali Suman
+</td>
+<td>
+458/500
+</td>
+<td>
+91.6%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2020-21
+</td>
+<td>
+Yugam Sharma
+</td>
+<td>
+461/500
+</td>
+<td>
+92.2%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2021-22
+</td>
+<td>
+Akshay Kumar
+</td>
+<td>
+440/500
+</td>
+<td>
+88%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2022-23
+</td>
+<td>
+Anshika Dhiman/
+Mitali Sharma
+</td>
+<td>
+468/500
+</td>
+<td>
+93.6%
+</td>
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+
+
+
+<div class="item">
+<table>
+<thead>
+<th colspan="4">
+Commerce Stream
+</th>
+</thead>
+<thead>
+<th colspan="1">
+Session
+</th>
+<th colspan="1"> 
+Name
+</th>
+<th colspan="1">
+Marks Obtained
+</th>
+<th colspan="1">
+Percentage
+</th>
+</thead>
+
+
+<tr>
+<td>
+2010-11
+</td>
+<td>
+Harish Kumar
+</td>
+<td>
+359/500
+</td>
+<td>
+71.8%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2011-12
+</td>
+<td>
+Harjinder Kumar
+</td>
+<td>
+376/500
+</td>
+<td>
+75.2%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2012-13
+</td>
+<td>
+Anil Kumar
+</td>
+<td>
+315/500
+</td>
+<td>
+63%
+</td>
+</tr>
+
+
+
+<tr>
+<td>
+2013-14
+</td>
+<td>
+Shalini
+</td>
+<td>
+390/500
+</td>
+<td>
+78%
+</td>
+</tr>
+
+
+
+
+
+
+<tr>
+<td>
+2014-15
+</td>
+<td>
+Shivani Thakur
+</td>
+<td>
+411/500
+</td>
+<td>
+82.2%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+2015-16
+</td>
+<td>
+Rahul
+</td>
+<td>
+439/500
+</td>
+<td>
+87.8%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2016-17
+</td>
+<td>
+Ankita Sharma
+</td>
+<td>
+443/500
+</td>
+<td>
+88.6%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+2017-18
+</td>
+<td>
+Des Raj
+</td>
+<td>
+407/500
+</td>
+<td>
+81.4%
+</td>
+</tr>
+
+
+
+
+
+
+<tr>
+<td>
+2018-19
+</td>
+<td>
+Sania
+</td>
+<td>
+462/500
+</td>
+<td>
+92.4%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+2019-20
+</td>
+<td>
+Basheer Khan
+</td>
+<td>
+396/500
+</td>
+<td>
+79.2%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2020-21
+</td>
+<td>
+Rijul
+</td>
+<td>
+449/500
+</td>
+<td>
+89.8%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2021-22
+</td>
+<td>
+Sandeep Dhiman
+</td>
+<td>
+434/500
+</td>
+<td>
+86.8%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2022-23
+</td>
+<td>
+Nandita Sharma
+</td>
+<td>
+445/500
+</td>
+<td>
+89%
+</td>
+</tr>
+</table>
+</div>
+
+
+
+
+
+
+
+
+
+<div class="item">
+<table>
+<thead>
+<th colspan="4">
+Arts Stream
+</th>
+</thead>
+<thead>
+<th colspan="1">
+Session
+</th>
+<th colspan="1"> 
+Name
+</th>
+<th colspan="1">
+Marks Obtained
+</th>
+<th colspan="1">
+Percentage
+</th>
+</thead>
+
+<tr>
+<td>
+2010-11
+</td>
+<td>
+Sumna Devi
+</td>
+<td>
+366/500
+</td>
+<td>
+73.2%
+</td>
+</tr>
+
+
+
+<tr>
+<td>
+2011-12
+</td>
+<td>
+Sunita Devi
+</td>
+<td>
+393/500
+</td>
+<td>
+78.6%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+2012-13
+</td>
+<td>
+Shalu Devi
+</td>
+<td>
+399/500
+</td>
+<td>
+79.8%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2013-14
+</td>
+<td>
+Pankaj Kumar
+</td>
+<td>
+370/500
+</td>
+<td>
+74%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2014-15
+</td>
+<td>
+Komal Sharma
+</td>
+<td>
+416/500
+</td>
+<td>
+83.2%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+2015-16
+</td>
+<td>
+Manish Sharma
+</td>
+<td>
+362/500
+</td>
+<td>
+72.4%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+2016-17
+</td>
+<td>
+Shivani Devi
+</td>
+<td>
+437/500
+</td>
+<td>
+87.4%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2017-18
+</td>
+<td>
+Rajni Devi
+</td>
+<td>
+387/500
+</td>
+<td>
+77.4%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2018-19
+</td>
+<td>
+Nehchal Kaur
+</td>
+<td>
+460/500
+</td>
+<td>
+92%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+2019-20
+</td>
+<td>
+Tanvi Thakur
+</td>
+<td>
+417/500
+</td>
+<td>
+83.4%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+2020-21
+</td>
+<td>
+Sakshi
+</td>
+<td>
+446/500
+</td>
+<td>
+89.2%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+2021-22
+</td>
+<td>
+Sania Sharma
+</td>
+<td>
+450/500
+</td>
+<td>
+90%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+2022-23
+</td>
+<td>
+Vaishnavi
+</td>
+<td>
+477/500
+</td>
+<td>
+95.4%
+</td>
+</tr>
+
+</table>
+</div>
+</div>
+</cure>
+
+<br>
+<footer>
+<p align="center"> This website is managed by students. <a href="https://gsssbangana.github.io/Web_Management">Click here</a> to know more. </p>
+
+
+</footer>
