--- a/Contacts.html
+++ b/Contacts.html
@@ -162,6 +162,6 @@ margin-left:  15px;
 <br>
 </cure>
 <footer> 
-<p align="center">This website in managed by students. <a href="https://gsssbangana.github.io/Web_Management">  </p>
+<p align="center">This website in managed by students. <a href="https://gsssbangana.github.io/Web_Management">Click here</a> to know more.</p>
 <p align="center">The guidelines are issued by the state Govt. </p>
 <p align="center"> You can know more about the board on <a href="https://hpbose.org">hpbose.org</a> </p></footer>
