--- a/Web_Management.html
+++ b/Web_Management.html
@@ -120,7 +120,7 @@
 <br>
 <h1 align="center" style="color:Red;"> Web Management </h1>
 
-<block>
+<block4>
 <p> This website is a product of collective efforts of students and serves the purpose of not only providing the information about school but also to inculcate the tech. related curiosity among students of the school. </p>
 <p> Here, we would like to thank our mentors without whom this website would have not existed.</p>
 <kr>
@@ -164,4 +164,13 @@ Divyanshu Sharma
 
 
 
-</block>
+</block4>
+</cure>
+
+<br>
+
+<footer>
+<p align="center"> The school comes under the HP Board. </p>
+<p align="center"> Visit <a href="https://hpbose.org">hpbose.org</a> to know more. </p>
+
+</footer>
