--- a/Administration/Charge_R&O.html
+++ b/Administration/Charge_R&O.html
@@ -130,3 +130,396 @@ margin-left:  15px;
     </ul>
 </nav>
 <br>
+<header>
+<h1 align="center" > Charge in registration/obstruction staff</h1>
+</header>
+<br>
+
+<h2> List of staff: </h2>
+<table>
+<th>
+Serial No.
+</th>
+<th>
+Name of the teacher
+</th>
+<th>
+Charge
+</th>
+
+<tr>
+<td>
+1
+</td>
+<td>
+Sh. Jitendra Sharma Lect. Com.
+</td>
+<td>
+Co-ordinator VT Education
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+2
+</td>
+<td>
+Sh. Narinder Dhiman Lect. Com.
+</td>
+<td>
+10+2 Board Exam, Staff Secretary Staff, 10+1 (Com.) Ad. Withdrawal
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+3
+</td>
+<td>
+Sh. Ram Murti Sharma Lect. Physics
+</td>
+<td>
+ICT Nodal/ Co-ordinator, 10+2 (Science) Adm. Withdrawal
+</td>
+</tr>
+
+
+
+<tr>
+<td>
+4
+</td>
+<td>
+Sh. vinod Kumar Lect. English
+</td>
+<td>
+Nil
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+5
+</td>
+<td>
+Sh. Vivek Kumar Lect. Biology
+</td>
+<td>
+NSS PO
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+6
+</td>
+<td>
+Smt. Salochna Devi Lect. Hindi
+</td>
+<td>
+NSS, 10+2 (Arts) Adm. Withdrawal
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+7
+</td>
+<td>
+Sh. Baldev Kalsi Lect. Pol Science
+</td>
+<td>
+Road Safety Club, 10+1 (Arts) Adm. Withdrawal
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+8
+</td>
+<td>
+Sh. Sunil Kumar Lect. Mathematics
+</td>
+<td>
+RMSA
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+9
+</td>
+<td>
+Sh. Ranjit Singh Lect. Economics
+</td>
+<td>
+Examination incharge 9th to 12th (Stationary), Disaster Management, 10+2 Result Register, !0+2 (Commerce) Adm. Withdrawal
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+10
+</td>
+<td>
+Smt. Dimple Kumari Lect. Chemistry
+</td>
+<td>
+Energy Club, 10+1 (Science) Adm. Withdrawal
+</td>
+</tr>
+
+
+
+
+
+
+<tr>
+<td>
+11
+</td>
+<td>
+Sh. Suresh Kumar Lect. Histroy
+</td>
+<td>
+Scholarship 9th to 12th
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+12
+</td>
+<td>
+Sh. Bhupinder Singh DPE
+</td>
+<td>
+Sports Equipment (Material), Road Safety Club, Stock Register Sports Fund
+</td>
+</tr>
+
+
+
+<tr>
+<td>
+13
+</td>
+<td>
+Sh. Revti Raman TGT (Non-Medical)
+</td>
+<td>
+Examination Incharge 6th to 10th
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+14
+</td>
+<td>
+Sh. Ramesh Kumar TGT (Arts)
+</td>
+<td>
+Property Incharge, 6th to 8th Scholarship
+</td>
+</tr>
+
+
+
+<tr>
+<td>
+15
+</td>
+<td>
+Smt. Indu Bala TGT (Medical) 
+</td>
+<td>
+Eco Club, Iron Folic Acid, Free Dress & Bags, Health Wellness, Inspire, Plastic Buy Back
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+16
+</td>
+<td>
+Smt. Champa Devi TGT (Arts)
+</td>
+<td>
+Adm. Withdrawal 9th to 10th
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td>
+17
+</td>
+<td>
+Smt. Rita Devi TGT (Arts)
+</td>
+<td>
+SSA (Sarva Shiksha Abhiyan)
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+18
+</td>
+<td>
+Sh. Manohar Lal DM
+</td>
+<td>
+Mid-Day Meal
+</td>
+</tr>
+
+
+
+<tr>
+<td>
+19
+</td>
+<td>
+Smt. Anu Bala (Language Teacher)
+</td>
+<td>
+Adm. Withdrawal (Elementary), Library, Free Text Book Distribution In School
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+20
+</td>
+<td>
+Smt. Jivan Asha (OT)
+</td>
+<td>
+Scout & Guide
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+21
+</td>
+<td>
+Sh. Raj Kumar PET
+</td>
+<td>
+Scout & Guide
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+22
+</td>
+<td>
+Sh. Subhash Chand IT Teacher
+</td>
+<td>
+SOS Exam, IT Lab (Secondary)
+</td>
+</tr>
+
+
+
+
+<tr>
+<td>
+23
+</td>
+<td>
+Sh. Manoj Kumar IT Teacher
+</td>
+<td>
+IT Lab (Elementary)
+</td>
+</tr>
+
+
+
+<tr>
+<td>
+24
+</td>
+<td>
+Office
+</td>
+<td>
+PTA/GDF And Other Fee Funds
+</td>
+</tr>
+
+
+
+
+
+
+
+</table>
+
+
+<br>
+
+</cure>
+
+<footer>
+<p align="center">
+This website is managed by students. <a href="https://gsssbangana.github.io/Web_Management">Click here</a> to know more.
+</footer>
