--- a/Features/Houses.html
+++ b/Features/Houses.html
@@ -163,7 +163,7 @@ the revolt of 1857. She is seen as a symbol of courage and a great feminist idol
 </div>
 </div>
 <h2> About the house:</h2>
-<p><strong> House Incharge:</strong> Sh. Rammurti Sharma </p> 
+<p><strong> House Incharge:</strong> Sh. Ram Murti Sharma </p> 
 <p><strong> Other Teachers:</strong> _____________ </p> 
 <p><strong> No. Of Students:</strong> _____________ </p> 
 <p><strong> Week alloted for the activities:</strong> Second Week </p> 
