--- a/Features/Clubs.html
+++ b/Features/Clubs.html
@@ -3,7 +3,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clubs | GSSSBangana</title>
-    <link href="main.css" rel="stylesheet" type="text/css" />
+    <link href="gsss.css" rel="stylesheet" type="text/css" />
     <script src="java.js" type="text/javascript"></script>
    <link rel=" icon" href="/hpbose.ICO" type="image/x-icon"/>
 <link rel="shortcut icon" href="/hpbose.ICO" type="image/x-icon"/>
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -117,3 +118,49 @@
 </nav>
 
 <br>
+<header>
+<h1 align="center" > CLUBS IN THE SCHOOL</h1>
+</header>
+<br>
+
+<block2>
+<h1 style="color:green"> Eco Club </h1>
+<div class="container1">
+<div class="item">
+<img src="https://i.imgur.com/fLSa0R9.png" width="350px" style="border-radius:15px">
+</div>
+<div class="item1">
+<p> <strong>Introduction: </strong>
+At GSSS Bangana, we believe in the power of collective action to create a sustainable and environmentally conscious community. The Eco Club is at the forefront of this mission, dedicated to fostering a sense of responsibility for our planet among students and staff.<p>
+<strong> Our Mission:</strong> The Eco Club is committed to promoting environmental awareness, sustainable practices, and conservation efforts within the school and the broader community. Through a variety of engaging initiatives, we aim to inspire positive change and contribute to a greener, more eco-friendly future.  </p>
+
+
+</div>
+<div class="item1">
+<h2> About the club:</h2>
+<p><strong> Club Incharge:</strong> Smt. Indu Bala TGT (Medical)</p> 
+<p><strong> Other Teachers:</strong> _____________ </p> 
+<p><strong> No. Of Students:</strong> 60 </p> 
+<p><strong> Time for the  meetings and activities:</strong> _______ </p> 
+</div>
+
+
+<div class="item1">
+ <h3> Educational Resources: </h3>
+<p> <strong> <a href="https://www.greenpeace.org/international/">Green Peace International</a>:</strong> Greenpeace is an independent global campaigning network, founded in Canada in 1971 by Irving Stowe and Dorothy Stowe, immigrant environmental activists from the United States.  <a href="https://www.greenpeace.org/international/">Know more.</a></p>
+<p> <strong><a href="https://www.worldwildlife.org/">World wildlife fund</a>  </strong>The World Wide Fund for Nature is a Swiss-based international non-governmental organization founded in 1961 that works in the field of wilderness preservation and the reduction of human impact on the environment. <a href="https://www.worldwildlife.org/">Know more.</a> </p>
+
+
+</div>
+</div>
+
+
+  </block2>
+
+<br>
+</cure>
+
+
+<footer>
+<p align="center"> This website is managed by the students. <a href="https://gsssbangana.github.io/Web_Management">Click here</a> to know more. </p>
+</footer>
