--- a/Features/Clubs.html
+++ b/Features/Clubs.html
@@ -129,14 +129,14 @@
 <div class="item">
 <img src="https://i.imgur.com/fLSa0R9.png" width="350px" style="border-radius:15px">
 </div>
-<div class="item1">
+<div class="item">
 <p> <strong>Introduction: </strong>
 At GSSS Bangana, we believe in the power of collective action to create a sustainable and environmentally conscious community. The Eco Club is at the forefront of this mission, dedicated to fostering a sense of responsibility for our planet among students and staff.<p>
 <strong> Our Mission:</strong> The Eco Club is committed to promoting environmental awareness, sustainable practices, and conservation efforts within the school and the broader community. Through a variety of engaging initiatives, we aim to inspire positive change and contribute to a greener, more eco-friendly future.  </p>
 
 
 </div>
-<div class="item1">
+<div class="item">
 <h2> About the club:</h2>
 <p><strong> Club Incharge:</strong> Smt. Indu Bala TGT (Medical)</p> 
 <p><strong> Other Teachers:</strong> _____________ </p> 
@@ -145,7 +145,7 @@ At GSSS Bangana, we believe in the power of collective action to create a sustai
 </div>
 
 
-<div class="item1">
+<div class="item">
  <h3> Educational Resources: </h3>
 <p> <strong> <a href="https://www.greenpeace.org/international/">Green Peace International</a>:</strong> Greenpeace is an independent global campaigning network, founded in Canada in 1971 by Irving Stowe and Dorothy Stowe, immigrant environmental activists from the United States.  <a href="https://www.greenpeace.org/international/">Know more.</a></p>
 <p> <strong><a href="https://www.worldwildlife.org/">World wildlife fund</a>  </strong>The World Wide Fund for Nature is a Swiss-based international non-governmental organization founded in 1961 that works in the field of wilderness preservation and the reduction of human impact on the environment. <a href="https://www.worldwildlife.org/">Know more.</a> </p>
