--- a/Administration/Charge_R&O.html
+++ b/Administration/Charge_R&O.html
@@ -131,7 +131,8 @@ margin-left:  15px;
 </nav>
 <br>
 <header>
-<h1 align="center" > Charge in registration/obstruction staff</h1>
+<h2 align="center" > Charge in R/O staff</h2>
+<p align="center"> registration/obstruction </p>
 </header>
 <br>
 
