--- a/Administration/Ministerial_Dept.html
+++ b/Administration/Ministerial_Dept.html
@@ -130,3 +130,81 @@ margin-left:  15px;
     </ul>
 </nav>
 <br>
+<header>
+<h1 align='center'>
+Ministerial Department
+</h1>
+</header>
+
+<h2> Department Details: </h2>
+
+<table>
+
+<th colspane="1"> Photo
+</th>
+<th colspane="1"> Name
+</th>
+<th colspane="1"> Designation
+</th>
+<th colspane="1"> Last Updated
+</th>
+
+
+
+
+
+<tr>
+<td>
+<img src="images/man.png" width="100px">
+</td>
+<td>
+Sh. Shashi Pal Singh
+</td>
+<td>
+Superintendent
+</td>
+<td>
+25/11/2023
+</td>
+</tr>
+
+
+
+<tr>
+<td>
+<img src="images/man.png" width="100px">
+</td>
+<td>
+Sh. Deepak Sharma
+</td>
+<td>
+Senior Assistant
+</td>
+<td>
+25/11/2023
+</td>
+</tr>
+
+<tr>
+<td>
+<img src="images/man.png" width="100px">
+</td>
+<td>
+Sh. Nitin Kumar Sharma
+</td>
+<td>
+Clerk
+</td>
+<td>
+25/11/2023
+</td>
+</tr>
+</table>
+
+</cure>
+<br>
+
+
+<footer>
+<p align="center"> This website is managed by the students. <a href="https://gsssbangana.github.io/Web_Management">Click here</a> to know more. 
+</footer>
