--- a/Features/Clubs/Red_Cross.html
+++ b/Features/Clubs/Red_Cross.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clubs | GSSSBangana</title>
+    <title>Red Cross Club | GSSSBangana</title>
     <link href="gsss.css" rel="stylesheet" type="text/css" />
     <script src="java.js" type="text/javascript"></script>
    <link rel=" icon" href="/hpbose.ICO" type="image/x-icon"/>
@@ -118,236 +118,8 @@
 </nav>
 
 <br>
-<header>
-<h1 align="center" > CLUBS IN THE SCHOOL</h1>
-</header>
-<br>
-<grandblock>
-<h2> Different Clubs And Their Details: </h2>
-<br>
-<div class="container2">
 
+<a href="https://gsssbangana.github.io">Home</a> >> Features >> <a href="https://gsssbangana.github.io/Clubs">Clubs</a> >> <a href="https://gsssbangana.github.io/Clubs/Red_Cross">Red Cross</a>
 
 
-<div class="item1">
 
-<a href="https://gsssbangana.github.io/Eco_Club"> <img src="https://i.imgur.com/x2tTbyT.jpg" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong>Eco Club:</strong> Fostering a sense of responsibility for our planet in students and staff.
-</p>
-
-</a>
-
-</div>
-
-
-
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Road_Safety"> <img src="https://i.imgur.com/lgJPBrG.jpg" class="center"  style="border-radius:15px">
-
-<p align="center"> 
-<strong>Road Safety Club:</strong> Fostering a sense of vigilance, responsibility, and awareness for safety.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Anti-Drug_Abuse"> <img src="https://i.imgur.com/WoVOlTW.png" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong>Anti-Drug Abuse Club:</strong> Fostering a sense of resilience and empowerment to create a community dedicated to a drug-free lifestyle
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Disaster_Management"> <img src="https://i.imgur.com/iL0yHBN.jpg" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong>Disaster Management Club:</strong> Fostering a sense of resilience and empowerment to create a community prepared for and capable of effective disaster management.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Anti-SHC"> <img src="https://i.imgur.com/xhEiEZi.jpg" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong>Anti-Sexual Harassment Committee:</strong> Fostering a sense of awareness, empathy, and accountability to create a safe and inclusive environment.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Red_Cross"> <img src="https://i.imgur.com/OzYr80p.png" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong>Red Cross Club:</strong> Fostering a culture of humanitarianism and community service to cultivate a compassionate and responsive environment.
-<br>
-</a>
-
-</div>
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/ELC"> <img src="https://i.imgur.com/O4Y7FKp.png" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong> Electoral Literacy Club:</strong> Fostering a sense of civic responsibility and awareness to create a informed and active participation in the democratic process.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Sports_Club"> <img src="https://i.imgur.com/22Etp9W.png" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong> Sports Club:</strong> Fostering a sense of teamwork, discipline, and sportsmanship to create a dynamic and inclusive Sports Club for enthusiasts of all levels.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/MDM"> <img src="https://i.imgur.com/4ShTGkq.jpg" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong> Mid-Day Meal:</strong> Fostering a sense of nutrition and community support to create a Mid-Day Meal initiative to ensure every child has access to a nourishing meal.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-</div>
-<br>
-</grandblock>
-
-<br>
-
-
-<grandblock>
-<h2> Some Organisations And Schemes: </h2>
-<br>
-<div class="container2">
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/NSS"> <img src="https://i.imgur.com/26qBJQO.jpg" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong> National Service Scheme:</strong> Fostering a sense of social responsibility and community service within our NSS, working towards positive change.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/NCC"> <img src="https://i.imgur.com/ymVMuFC.png" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong> National Cadet Corps:</strong> Fostering a sense of discipline and patriotism to create responsible citizens within our NCC unit.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Scout&Guide"> <img src="https://i.imgur.com/fZB8cFA.jpg" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong> Scout And Guide:</strong> Fostering a sense of preparedness and character development within our Scout and Guide community.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-
-
-
-
-
-</div>
-</grandblock>
-
-
-
-
-
-
-
-
-
-
-<br>
-</cure>
-
-
-<footer>
-<p align="center"> This website is managed by the students. <a href="https://gsssbangana.github.io/Web_Management">Click here</a> to know more. </p>
-</footer>
