--- a/Features/Clubs/Eco_Club.html
+++ b/Features/Clubs/Eco_Club.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clubs | GSSSBangana</title>
+    <title>Eco Club | GSSSBangana</title>
     <link href="gsss.css" rel="stylesheet" type="text/css" />
     <script src="java.js" type="text/javascript"></script>
    <link rel=" icon" href="/hpbose.ICO" type="image/x-icon"/>
@@ -122,227 +122,40 @@
 <h1 align="center" > CLUBS IN THE SCHOOL</h1>
 </header>
 <br>
-<grandblock>
-<h2> Different Clubs And Their Details: </h2>
-<br>
-<div class="container2">
 
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Eco_Club"> <img src="https://i.imgur.com/x2tTbyT.jpg" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong>Eco Club:</strong> Fostering a sense of responsibility for our planet in students and staff.
-</p>
-
-</a>
-
+<block2>
+<h1 style="color:green"> Eco Club </h1>
+<div class="container1">
+<div class="item">
+<img src="https://i.imgur.com/fLSa0R9.png" width="350px" style="border-radius:15px">
 </div>
-
-
-
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Road_Safety"> <img src="https://i.imgur.com/lgJPBrG.jpg" class="center"  style="border-radius:15px">
-
-<p align="center"> 
-<strong>Road Safety Club:</strong> Fostering a sense of vigilance, responsibility, and awareness for safety.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Anti-Drug_Abuse"> <img src="https://i.imgur.com/WoVOlTW.png" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong>Anti-Drug Abuse Club:</strong> Fostering a sense of resilience and empowerment to create a community dedicated to a drug-free lifestyle
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Disaster_Management"> <img src="https://i.imgur.com/iL0yHBN.jpg" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong>Disaster Management Club:</strong> Fostering a sense of resilience and empowerment to create a community prepared for and capable of effective disaster management.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Anti-SHC"> <img src="https://i.imgur.com/xhEiEZi.jpg" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong>Anti-Sexual Harassment Committee:</strong> Fostering a sense of awareness, empathy, and accountability to create a safe and inclusive environment.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Red_Cross"> <img src="https://i.imgur.com/OzYr80p.png" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong>Red Cross Club:</strong> Fostering a culture of humanitarianism and community service to cultivate a compassionate and responsive environment.
-<br>
-</a>
-
-</div>
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/ELC"> <img src="https://i.imgur.com/O4Y7FKp.png" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong> Electoral Literacy Club:</strong> Fostering a sense of civic responsibility and awareness to create a informed and active participation in the democratic process.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Sports_Club"> <img src="https://i.imgur.com/22Etp9W.png" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong> Sports Club:</strong> Fostering a sense of teamwork, discipline, and sportsmanship to create a dynamic and inclusive Sports Club for enthusiasts of all levels.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/MDM"> <img src="https://i.imgur.com/4ShTGkq.jpg" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong> Mid-Day Meal:</strong> Fostering a sense of nutrition and community support to create a Mid-Day Meal initiative to ensure every child has access to a nourishing meal.
-</p>
-<br>
-</a>
-
-</div>
-
-
+<div class="item">
+<p> <strong>Introduction: </strong>
+At GSSS Bangana, we believe in the power of collective action to create a sustainable and environmentally conscious community. The Eco Club is at the forefront of this mission, dedicated to fostering a sense of responsibility for our planet among students and staff.<p>
+<strong> Our Mission:</strong> The Eco Club is committed to promoting environmental awareness, sustainable practices, and conservation efforts within the school and the broader community. Through a variety of engaging initiatives, we aim to inspire positive change and contribute to a greener, more eco-friendly future.  </p>
 
 
 </div>
-<br>
-</grandblock>
-
-<br>
-
-
-<grandblock>
-<h2> Some Organisations And Schemes: </h2>
-<br>
-<div class="container2">
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/NSS"> <img src="https://i.imgur.com/26qBJQO.jpg" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong> National Service Scheme:</strong> Fostering a sense of social responsibility and community service within our NSS, working towards positive change.
-</p>
-<br>
-</a>
-
+<div class="item">
+<h2> About the club:</h2>
+<p><strong> Club Incharge:</strong> Smt. Indu Bala TGT (Medical)</p> 
+<p><strong> Other Teachers:</strong> _____________ </p> 
+<p><strong> No. Of Students:</strong> 60 </p> 
+<p><strong> Time for the  meetings and activities:</strong> _______ </p> 
 </div>
 
 
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/NCC"> <img src="https://i.imgur.com/ymVMuFC.png" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong> National Cadet Corps:</strong> Fostering a sense of discipline and patriotism to create responsible citizens within our NCC unit.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-
-<div class="item1">
-
-<a href="https://gsssbangana.github.io/Clubs/Scout&Guide"> <img src="https://i.imgur.com/fZB8cFA.jpg" class="center" style="border-radius:15px">
-<p align="center"> 
-<strong> Scout And Guide:</strong> Fostering a sense of preparedness and character development within our Scout and Guide community.
-</p>
-<br>
-</a>
-
-</div>
-
-
-
-
-
-
-
-
+<div class="item">
+ <h3> Educational Resources: </h3>
+<p> <strong> <a href="https://www.greenpeace.org/international/">Green Peace International</a>:</strong> Greenpeace is an independent global campaigning network, founded in Canada in 1971 by Irving Stowe and Dorothy Stowe, immigrant environmental activists from the United States.  <a href="https://www.greenpeace.org/international/">Know more.</a></p>
+<p> <strong><a href="https://www.worldwildlife.org/">World wildlife fund</a>  </strong>The World Wide Fund for Nature is a Swiss-based international non-governmental organization founded in 1961 that works in the field of wilderness preservation and the reduction of human impact on the environment. <a href="https://www.worldwildlife.org/">Know more.</a> </p>
 
 
 </div>
-</grandblock>
+</div>
 
 
-
-
-
-
-
-
-
+  </block2>
 
 <br>
 </cure>
