--- a/Academics/Results.html
+++ b/Academics/Results.html
@@ -13,6 +13,7 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120-precomposed.png"/>
 </head>
 <body>
+<cure>
 <nav id="ddmenu">
     <div class="menu-icon"></div>
     <ul>
@@ -117,3 +118,379 @@
 </nav>
 
 <br>
+
+<header>
+<h1 align="center">
+Results Of The Exams Conducted! 
+</h1>
+</header>
+<br>
+
+
+<h1> Results: </h1>
+
+<kr>
+
+<h1 align="center"> Session 2023-24 </h1>
+
+<br> <kr>
+
+<h2 align="center"> Session Ending Exams </h2>
+
+<table class="center">
+<th>
+Serial No.
+</th>
+<th>
+Standard
+</th>
+<th>
+Exam Date
+</th>
+<th>
+Results
+</th>
+<th>
+Pass Percentage
+</th>
+
+<tr>
+<td align="center">
+1.
+</td>
+<td>
+6th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+<tr>
+<td align="center">
+2.
+</td>
+<td>
+7th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+<tr>
+<td align="center">
+3.
+</td>
+<td>
+8th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td align="center">
+4.
+</td>
+<td>
+9th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td align="center">
+5.
+</td>
+<td>
+10th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td align="center">
+6.
+</td>
+<td>
+11th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td align="center">
+7.
+</td>
+<td>
+12th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+
+
+
+
+
+</table>
+
+
+
+
+
+
+<kr>
+
+
+<br>
+<h2 align="center"> Mid-Term Exams </h2>
+
+<table class="center">
+<th>
+Serial No.
+</th>
+<th>
+Standard
+</th>
+<th>
+Exam Date
+</th>
+<th>
+Results
+</th>
+<th>
+Pass Percentage
+</th>
+
+
+
+
+<tr>
+<td align="center">
+1.
+</td>
+<td>
+6th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+<tr>
+<td align="center">
+2.
+</td>
+<td>
+7th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+<tr>
+<td align="center">
+3.
+</td>
+<td>
+8th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td align="center">
+4.
+</td>
+<td>
+9th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td align="center">
+5.
+</td>
+<td>
+10th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+
+
+
+<tr>
+<td align="center">
+6.
+</td>
+<td>
+11th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+
+
+<tr>
+<td align="center">
+7.
+</td>
+<td>
+12th
+</td>
+<td>
+__/__/2023
+</td>
+<td>
+<a href="#">Get result </a>
+</td>
+<td>
+__%
+</td>
+</tr>
+
+
+
+
+
+
+
+</table>
+
+</cure>
+
+<br>
+
+
+<footer>
+ <p align="center">
+This website is managed by the students. <a href="https://gsssbangana.github.io">Click here</a> to know more. 
+</p>
+
+</footer>
